<resources>
    <string name="app_name">My Personal Finances App</string>
    <string name="desc_app_logo_label">App Logo</string>
    <string name="desc_app_logo_image">App Image Logo</string>
    <string name="desc_account_balance">Account Balance</string>
    <string name="desc_all_transactions">All Transactions</string>
    <string name="desc_top_up_transactions">Top-Up Transactions</string>
    <string name="desc_expense_transactions">Expense Transactions</string>
    <string name="section_text_dashboard">Dashboard</string>
    <string name="desc_add_transaction">Add Transaction</string>
    <string name="hint_transaction_type">Enter type for transaction</string>
    <string name="hint_transaction_quantity">Enter quantity for transaction (100.99)</string>
    <string name="hint_transaction_date">Pick date for transaction (YYYY-MM-DD)</string>
    <string name="hint_transaction_details">Enter transaction details</string>
    <string name="label_transaction_type">Type:</string>
    <string name="label_transaction_quantity">Quantity:</string>
    <string name="label_transaction_date">Date:</string>
    <string name="placeholder_app_section_title">placeholder</string>
    <string name="toast_add_transaction_success">Transaction added successfully…</string>
    <string name="toast_add_transaction_failure">Transaction could not be added…</string>
    <string name="toast_add_transaction_require_positive">Transaction must be positive…</string>
    <string name="toast_add_transaction_require_negative">Transaction must be negative…</string>
    <string name="toast_add_transaction_require_type">Transaction must have a type…</string>
    <string name="toast_add_transaction_require_quantity">Transaction must have a quantity…</string>
    <string name="toast_add_transaction_require_date">Transaction must have a date…</string>
    <string name="desc_delete_transaction">Delete Transaction</string>
    <string name="alert_delete_transaction_message">The selected transaction will be deleted. Are you sure?</string>
    <string name="alert_delete_transaction_ok">Delete</string>
    <string name="alert_delete_transaction_cancel">@android:string/cancel</string>
    <string name="toast_transaction_deletion_success">Transaction deleted successfully</string>
    <string name="toast_transaction_deletion_failure">Could not delete transaction</string>
</resources>